Исправил user api в соответстрии с сервисом
